<resources>
    <string name="app_name">EduParents</string>
    <string name="ver_hijos_btn">Ver Mis Hijos</string>
    <string name="ver_notas_de_mis_hijos">Ver Notas de Mis Hijos</string>
    <string name="editar_mi_perfil">Editar Mi Perfil</string>
    <string name="informaci_n_del_padre_tutor">Información del Padre/Tutor</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="email_email_com">email@email.com</string>
    <string name="gestiona_la_informaci_n_de_tus_hijos">Gestiona la información de tus hijos</string>
    <string name="n_mero_de_tel_fono">Número de teléfono</string>
    <string name="mock_phone_number">+### ####-####</string>
    <string name="portal_de_padres">Portal de Padres</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="no_tienes_cuenta_reg_strate">¿No tienes cuenta? Regístrate</string>
    <string name="eduparents">EduParents</string>
    <string name="logo_de_eduparents">Logo de EduParents</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_work">Tareas</string>
    <string name="menu_favorites">Favoritos</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_settings">Configuración</string>
    <string name="tareas_asignadas">Tareas Asignadas</string>
    <string name="gestiona_las_tareas_de_tus_hijos">Gestiona las tareas de tus hijos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>